--- a/10-tableau-et-mode-de-positionnement/06-horaire/css/style.css
+++ b/10-tableau-et-mode-de-positionnement/06-horaire/css/style.css
@@ -6,6 +6,7 @@ td,th {
     border : 1px solid #aaa;
     padding : 5px;
     width : 78px;
+    height : 40px;
 }
 
 th {
@@ -30,6 +31,7 @@ thead tr {
 thead th {
     transform : rotate(90deg);
     background-color:transparent;
+    text-shadow: 1px 1px 1px #468ae8;
     
    
 }
@@ -38,6 +40,7 @@ thead th {
     transform : rotate(45deg);
     color :rgb(22, 156, 234);
     font-weight: bold;
+    text-align: center;
 }
 
 .vertical {
@@ -54,4 +57,8 @@ thead th {
 }
 .p-5w5 {
     background-color: rgb(22, 156, 234);
+}
+
+.tableau__h3 {
+    font-size: .8rem;
 }
