--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,64 +1,80 @@
-table {
-    border-collapse: collapse;
+.tableau {
+  border-collapse: collapse;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
-td,th {
-    border : 1px solid #aaa;
-    padding : 5px;
-    width : 78px;
-    height : 40px;
+.tableau__caption {
+  font-size: 5rem;
+  color: #777;
+}
+
+td,
+th {
+  border: 1px solid #aaa;
+  padding: 5px;
+  width: 200px;
+  height: 40px;
 }
 
 th {
-    background-color: rgb(186, 246, 226);
+  background-color: rgb(186, 246, 226);
 }
 
 thead {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 tbody {
-    font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 tfoot {
-    font-family: fantasy;
+  font-family: fantasy;
 }
 thead tr {
-     height : 100px;
-     background-color: bisque;
+  height: 100px;
+  background-color: bisque;
 }
 
 thead th {
-    transform : rotate(90deg);
-    background-color:transparent;
-    text-shadow: 1px 1px 1px #468ae8;
-    
-   
+  transform: rotate(90deg);
+  background-color: transparent;
+  text-shadow: 1px 1px 1px #468ae8;
 }
 
 .diagonal {
-    transform : rotate(45deg);
-    color :rgb(22, 156, 234);
-    font-weight: bold;
-    text-align: center;
+  transform: rotate(45deg);
+
+  font-weight: bold;
+  text-align: center;
 }
 
 .vertical {
-    transform : rotate(90deg);
-    color :rgb(7, 86, 132);
-    font-weight: bold;
-    font-variant: small-caps;
-    padding: 0;
-
+  transform: rotate(90deg);
+  color: rgb(7, 86, 132);
+  font-weight: bold;
+  font-variant: small-caps;
+  padding: 0;
 }
 
 .m-1w1 {
-    background-color: rgb(231, 173, 26);
+  background-color: rgb(239 216 156);
+  color: rgb(16, 120, 181);
 }
 .p-5w5 {
-    background-color: rgb(22, 156, 234);
+  background-color: rgb(22, 156, 234);
+  color: rgb(0 15 196);
 }
 
 .tableau__h3 {
-    font-size: .8rem;
+  font-size: 1rem;
+}
+
+.tableau__h2 {
+  font-size: 2rem;
+}
+
+.tableau__caption {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
